--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/F291D647-0790-4FBD-A37B-AF0869698C9E.png" class="logo">
+                <img src="Images/F291D647-0790-4FBD-A37B-AF0869698C9E.png" class="logo">
                 <ul id="sidemenu">
                     <li>
                         <a href="#home">Home</a>
@@ -49,7 +49,7 @@
             <h2 class="sub-title">About Us</h2>
           <div class="row">
             <div class="about-col-1">
-              <img src="images/F291D647-0790-4FBD-A37B-AF0869698C9E.png">
+              <img src="Images/F291D647-0790-4FBD-A37B-AF0869698C9E.png">
             </div>
             <div class="about-col-2">
               <p>As a growing educational institution, Outpost Academy is committed to expanding its offerings to include on-site, online, and hybridized learning models. Our vision encompasses many disciplines, including the hard sciences, life sciences, mathematics, and social sciences. Our mission is to cultivate academic rigor that prepares students for college and university. 
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-3">
-                    <img src="images/Omar's headshot 3.jpeg">
+                    <img src="Images/Omar's headshot 3.jpeg">
                     <h1>Founder<br></h1>
                 </div>
                 <div class="about-col-4">
