--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="Images/F291D647-0790-4FBD-A37B-AF0869698C9E.png" class="logo">
+                <img src="images/F291D647-0790-4FBD-A37B-AF0869698C9E.png" class="logo">
                 <ul id="sidemenu">
                     <li>
                         <a href="#home">Home</a>
@@ -49,7 +49,7 @@
             <h2 class="sub-title">About Us</h2>
           <div class="row">
             <div class="about-col-1">
-              <img src="Images/F291D647-0790-4FBD-A37B-AF0869698C9E.png">
+              <img src="images/F291D647-0790-4FBD-A37B-AF0869698C9E.png">
             </div>
             <div class="about-col-2">
               <p>As a growing educational institution, Outpost Academy is committed to expanding its offerings to include on-site, online, and hybridized learning models. Our vision encompasses many disciplines, including the hard sciences, life sciences, mathematics, and social sciences. Our mission is to cultivate academic rigor that prepares students for college and university. 
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-3">
-                    <img src="Images/Omar's headshot 3.jpeg">
+                    <img src="images/Omar's headshot 3.jpeg">
                     <h1>Founder<br></h1>
                 </div>
                 <div class="about-col-4">
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row">
             <div class="curr-courses-col-1">
-                <img src="Images/Library.png">
+                <img src="images/Library.png">
                 <div class="curr-courses-col-2">
                     <h1 class="sub-title">Courses</h1>
                     <p>2025-2026</p>
@@ -133,7 +133,7 @@
     </div>
     <div class="work-list">
         <div class="work">
-            <img src="Images/classroom-2093743_1920.jpg">
+            <img src="images/classroom-2093743_1920.jpg">
             <div class="layer">
                 <h3>Welcome to Outpost Academy</h3>
                 <p>This is the introductory video for our classes.</p>
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div class="work">
-            <img src="Images/classroom photo 4.png">
+            <img src="images/classroom photo 4.png">
             <div class="layer">
                 <h3>Outpost US1 The European Conquest of the Americas</h3>
                 <p>This is the first of a series of lectures on Early United States History. This lecture covers the initial occupation of the East Coast of North America by European settlers.</p>
